--- a/application.client/src/app/app.component.html
+++ b/application.client/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>
-  This is home page
-</h1>
-
-<router-outlet />
+<app-header></app-header>
+<div class="p-4 container-fluid bg-seconday-custom h-100">
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
